# booklists

./: README.md  release.nix  types.dhall
computeIntersection/: computeIntersection.cabal  shell.nix
computeIntersection/src/: Main.hs
lists/: 100-best-21st-century.dhall  100-best-novels-written-english.dhall  100-greatest-nonfiction.dhall  100-must-read-indie-books.dhall  120-jordan-peterson.dhall  74-books-nassim-taleb.dhall  alain-de-botton.dhall  best-translated-books-2020.dhall  erraticus-must-reads.dhall  five-books-most-recommended.dhall  five-books-psychology.dhall  graham-school-basic-program.dhall  greater-books-master-list.dhall  greater-books-short-list.dhall  how-to-read-a-book.dhall  less-wrong-recommended-rationalist-reading.dhall  less-wrong-textbooks.dhall  meta-filter-single-best-introduction-field.dhall  miri-research.dhall  mit-press-essential-knowledge-series.dhall  myth-meaning-experience.dhall  parnell-read.dhall  parnell-to-read.dhall  parnell-want-to-read.dhall  st-johns-curriculum.dhall  william-james-book-award.dhall
